prod/homelan/9-parse/parse-server-setup-manifest.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: parse
  namespace: parse
  labels:
    app: parse-server
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: parse-server
  template:
    metadata:
      labels:
        app: parse-server
    spec:
      containers:
      - name: parse-server
        image: parseplatform/parse-server:latest
        ports:
        - containerPort: 1337
        volumeMounts:
        - name: parse-config-storage
          mountPath: /parse-server/config
      volumes:
      - name: parse-config-storage
        persistentVolumeClaim:
          claimName: parse-server-config-pvc
        configMap:
          name: parse-server-config
