prod/homelan/9-parse/parse-dashboard-setup.yaml
# {
#   "apps": [
#     {
#       "serverURL": "http://localhost:1337/parse",
#       "appId": "hello",
#       "masterKey": "world",
#       "appName": "",
#       "iconName": "",
#       "primaryBackgroundColor": "#FFA500",
#       "secondaryBackgroundColor": "#FF4500" 
#     }
#   ],
#   "iconsFolder": "icons"
# }
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: parse-dashboard
  namespace: parse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parse-dashboard
  template:
    metadata:
      labels:
        app: parse-dashboard
    spec:
      containers:
        - name: parse-dashboard
          image: parseplatform/parse-dashboard:latest
          args: ["--allowInsecureHTTP"]
          ports:
            - containerPort: 4040
          volumeMounts:
            - name: parse-dashboard-config-volume
              mountPath: /src/Parse-Dashboard/parse-dashboard-config.json
              subPath: "parse-dashboard-config.json"
      volumes:
        - name: parse-dashboard-config-volume
          configMap:
            name: parse-dashboard-config
---
apiVersion: v1
kind: Service
metadata:
  name: parse-dashboard
  namespace: parse
spec:
  selector:
    app: parse-dashboard
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
  type: ClusterIP
