prod/homelan/9-parse/parse-server-setup.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: parse-server-config-alt
#   namespace: parse
# data:
#   # property-like keys; each key maps to a simple value
#   PARSE_SERVER_MASTER_KEY_IPS: "10.10.0.0/16"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parse-server
  namespace: parse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parse-server
  template:
    metadata:
      labels:
        app: parse-server
    spec:
      containers:
        - name: parse-server
          image: parseplatform/parse-server:latest
          args: ["/config/default.json"]
          # args: ["/config/default.json", "--masterKeyIps 10.10.0.132"]
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: parse-server-config-volume
              mountPath: /config
          # envFrom:
          #   - configMapRef: 
          #       name: parse-server-config-alt
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: parse-server-config-volume
          configMap:
            name: parse-server-config
---
apiVersion: v1
kind: Service
metadata:
  name: parse-server
  namespace: parse
spec:
  selector:
    app: parse-server
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
  type: ClusterIP
